--- a/SmartWordle.html
+++ b/SmartWordle.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Wordle Game</title>
-<link rel="stylesheet" href="style.css">
-</head>
-<body>
-<div id="wordleGrid"></div>
-<input type="text" id="guessInput" maxlength="5" />
-<button onclick="submitGuess()">Submit Guess</button>
-<script src="script.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Wordle Game</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <h1> Smart Wordle </h1>
+        <div class="wordle-grid">
+            <!-- 5x5 grid of empty boxes -->
+            <div class="wordle-box">H</div><div class="wordle-box">E</div><div class="wordle-box">L</div><div class="wordle-box">L</div><div class="wordle-box">O</div>
+            <div class="wordle-box"></div><div class="wordle-box"></div><div class="wordle-box"></div><div class="wordle-box"></div><div class="wordle-box"></div>
+            <div class="wordle-box"></div><div class="wordle-box"></div><div class="wordle-box"></div><div class="wordle-box"></div><div class="wordle-box"></div>
+            <div class="wordle-box"></div><div class="wordle-box"></div><div class="wordle-box"></div><div class="wordle-box"></div><div class="wordle-box"></div>
+            <div class="wordle-box"></div><div class="wordle-box"></div><div class="wordle-box"></div><div class="wordle-box"></div><div class="wordle-box"></div>
+        </div>
+        <input type="text" id="guessInput" maxlength="5" />
+        <button onclick="submitGuess()">Submit Guess</button>
+        <script src="script.js"></script>
+    </body>
 </html>
