--- a/SmartWordle.html
+++ b/SmartWordle.html
@@ -11,15 +11,7 @@
     <body>
         <h1>Smart Wordle</h1>
         <div class="wordle-grid"></div>
-        <div class="wordle-grid">
-            <div class="wordle-box"> H </div><div class="wordle-box"> E </div><div class="wordle-box"> L </div><div class="wordle-box"> L </div><div class="wordle-box"> O </div>
-            <div class="wordle-box">   </div><div class="wordle-box">   </div><div class="wordle-box">   </div><div class="wordle-box">   </div><div class="wordle-box">   </div>
-            <div class="wordle-box">   </div><div class="wordle-box">   </div><div class="wordle-box">   </div><div class="wordle-box">   </div><div class="wordle-box">   </div>
-            <div class="wordle-box">   </div><div class="wordle-box">   </div><div class="wordle-box">   </div><div class="wordle-box">   </div><div class="wordle-box">   </div>
-            <div class="wordle-box">   </div><div class="wordle-box">   </div><div class="wordle-box">   </div><div class="wordle-box">   </div><div class="wordle-box">   </div>
-        </div>
-        <!-- Doesn't work yet-->
-        <py-script src = "SmartWordle.py">
+        <py-script src = "SmartWordle.py"> </py-script>
         <div id="message" style="color: red; margin-bottom: 10px;"></div>
         <input type="text" id="guessInput" maxlength="5" placeholder="Enter guess here..." />
         <button onclick="submitGuess()">Submit Guess</button>
