Added way to track user data

--- a/SmartWordle.html
+++ b/SmartWordle.html
@@ -11,7 +11,7 @@
     <body>
         <h1>Smart Wordle</h1>
         <div class="wordle-grid"></div>
-        <py-script src = "SmartWordle.py"> </py-script>
+        <button id = "playAgainButton" style = "display: none;"> Play Again </button>
         <div id="keyboard"></div>
         <script src="script.js"></script>
     </body>
